SERVER-24935 - Retry failed index builds upon receiving WT_CACHE_FULL